fix NavLink Css to align NavBar icons and text

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,7 +2,7 @@
     font-family: "Varela Round", sans-serif;
     background-color: #00896F;
     min-height: 100vh;
-    font-size: 21px;
+    font-size: 18px;
     font-weight: bold;
   }
 
